# localloom

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
api/src/main/resources/: application.yml  log4j2-spring.xml
api/src/test/resources/: application-test.yml
docs/: DESIGN.md  DIAGRAMS.md  TESTING.md
frontend/: .gitignore  Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: chat.spec.ts  connectors-api.spec.ts  dashboard.spec.ts  file-upload-pipeline.spec.ts  import-dialog-fields.spec.ts  import-pipeline.spec.ts  library.spec.ts  navigation.spec.ts  settings.spec.ts  url-auto-detect.spec.ts  web-page-pipeline.spec.ts  youtube-pipeline.spec.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: app-sidebar.tsx  audio-player.tsx  chat-input.tsx  chat-message.tsx  chat-view.tsx  citation-panel.tsx  dashboard-status.tsx  episode-item.tsx  import-dialog.tsx  job-tracker.tsx  settings-view.tsx  source-card.tsx  theme-toggle.tsx  transcript-viewer.tsx
frontend/src/components/__tests__/: audio-player.test.tsx  chat-view.test.tsx  import-dialog.test.tsx  (+4 more)
frontend/src/lib/: api.ts  logger.ts  types.ts  utils.ts
ml-sidecar/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ml-sidecar/app/: config.py  logging_config.py  main.py
ml-sidecar/app/endpoints/: metrics.py  transcribe.py  tts.py
ml-sidecar/app/services/: tts_service.py  whisper_service.py
ml-sidecar/tests/: test_config.py  test_request_id.py  test_transcribe.py  test_tts.py  test_tts_service.py  test_whisper_service.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  localloom-overview.json
scripts/: _collect-logs.sh  backup.sh  dev.sh  e2e.sh  logs-export.sh  restart.sh  restore.sh  setup.sh  start.sh
test-fixtures/: nginx.conf  rss-feed.xml  test-page.html  test-upload.txt  youtube-metadata.json  yt-dlp-stub.sh
(+109 files in other folders)
