[project]
name = "localloom-ml-sidecar"
version = "0.1.0"
description = "LocalLoom ML Sidecar — Whisper transcription and Piper TTS"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "faster-whisper",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
dev = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
