[project]
name = "localloom-ml-sidecar"
version = "0.1.0"
description = "LocalLoom ML Sidecar — Whisper transcription and Piper TTS"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "faster-whisper",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio>=0.23",
    "httpx",
]
dev = [
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/endpoints/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
